# xruntime

./: README.md  build.bat  build.sh  deps.sh  gen.bat  gen.sh  start.bat  新人介绍.txt
src/: .gn  BUILD.gn
src/base/: BUILD.gn
src/base/i18n/: streaming_utf8_validator_unittest.cc
src/net/: BUILD.gn
src/net/base/: address_list.cc  address_list.h  address_list_unittest.cc  byte_stream.cc  byte_stream.h  escape.cc  escape.h  host_port_pair.cc  host_port_pair.h  host_port_pair_unittest.cc  io_buffer.cc  io_buffer.h  ip_endpoint.cc  ip_endpoint.h  ip_pattern.cc  ip_pattern.h  net_error_list.h  net_errors.cc  net_errors.h  net_util.cc  net_util.h  net_util_unittest.cc
src/net/codec/: codec_callback.h
src/net/codec/length_header/: length_header_codec.cc  length_header_codec.h
src/net/codec/teamtalk/: teamtalk_codec.cc  teamtalk_codec.h  teamtalk_packet.cc  teamtalk_packet.h
src/net/codec/znet/: packet.cc  packet.h  znet_codec.cc  znet_codec.h  znet_packet_header.h
src/net/engine/: io_handler.cc  io_handler.h  reactor_thread.cc  reactor_thread.h  reactor_thread_pool.cc  reactor_thread_pool.h  socket_ops.cc  socket_ops.h  tcp_acceptor.cc  tcp_acceptor.h  tcp_client.cc  tcp_client.h  tcp_connector.cc  tcp_connector.h  tcp_server.cc  tcp_server.h
src/net/http/: http_request_codec.cc  http_request_codec.h  http_request_context.cc  http_request_context.h  http_server_request_info.cc  http_server_response_info.cc
src/net/message_loop/: message_loop_for_net.cc  message_loop_for_net.h  message_pump_net.cc  message_pump_net.h
src/net/session/: base_session.h
src/net/util/: time_syncor.h
src/sample/c1000k/: BUILD.gn  README  c1000k_client.cc  c1000k_client.h  c1000k_server.cc  c1000k_server.h  netengine.cc
src/sample/script/: BUILD.gn  scriptengine.cc  scriptengine.lua
src/sample/trace/: BUILD.gn  trace.cpp
src/script/: BUILD.gn  lua_include.hpp  lua_util.cc  lua_util.h  luabind_register_func.h  luabind_register_manager.h  script_engine.cc  script_engine.h
src/script/base/: linked_hash_map.h  linked_map.h
src/script/lua-5.2.3/src/: ldo.c
src/script/luatinker/: lua_tinker.cpp  lua_tinker.h
src/server/: BUILD.gn
src/server/base/: config_file.cc  config_file.h  config_file_util.cc  config_file_util.h  config_file_xml_handler.cc  config_file_xml_handler.h  dyn_lib.cc  dyn_lib.h  dyn_lib_manager.cc  dyn_lib_manager.h  exception.cc  exception.h  shared_ptr.h  string_vector.h  timer_manager.cc  timer_manager.h  zlib_compress.cc  zlib_compress.h
src/server/base/xml/: expat_parser.cc  expat_parser.h  expat_parser_module.cpp  expat_parser_module.h  rapidxml_parser.cc  rapidxml_parser.h  tinyxml_parser.cc  tinyxml_parser.h  xml_attributes.cc  xml_attributes.h  xml_handler.h  xml_lite.cc  xml_lite.h  xml_parser.cc  xml_parser.h  xml_parser_module.cc  xml_parser_module.h  xml_serializer.cc  xml_serializer.h
src/server/daemon/: daemon.cc  daemon.h
src/testing/gmock/include/gmock/: gmock-matchers.h
src/testing/gtest/include/gtest/internal/: gtest-port.h
src/testing/gtest/test/: gtest-printers_test.cc
src/tools/gyp/pylib/gyp/generator/: ninja.py
src/tools/ipc_fuzzer/message_lib/: message_names.h
src/zengine/: BUILD.gn
src/zengine/base/: rsa_help.cc  rsa_help.h
src/zengine/module/mod_console/: base_console.cc  base_console.h  console_listener.h  console_thread.cc  console_thread.h  module_console_dll.cc  module_console_dll.h  module_console_plugin.cc  module_console_plugin.h
src/zengine/module/mod_console/register_helper/: console_register_helper.cc
src/zengine/module/mod_db/: module_db_dll.cc  module_db_dll.h  module_db_plugin.cc  module_db_plugin.h
src/zengine/module/mod_db/register_helper/: db_register_helper.cc
src/zengine/module/mod_net/: comm_node_info.cc  comm_node_info.h  module_net_dll.cc  module_net_dll.h  module_net_plugin.cc  module_net_plugin.h  znet_comm_handler.cc  znet_comm_handler.h  znet_handler_context.h  znet_tcp_client.cc  znet_tcp_client.h  znet_tcp_server.cc  znet_tcp_server.h
src/zengine/module/mod_net/register_helper/: net_register_helper.cc
src/zengine/module/mod_xml/: module_xml_dll.cc  module_xml_dll.h  module_xml_plugin.cc  module_xml_plugin.h  zxml_wrapper.cc  zxml_wrapper.h
src/zengine/module/mod_xml/register_helper/: xml_register_helper.cc
src/zengine/scripts/: echo_client.xml  echod.xml
src/zengine/scripts/lua/util/: json.lua  logger.lua  url_codec.lua  util.lua
src/zengine/scripts/lua/zengine/: main.lua  thread.lua  xml.lua  znet_handler_engine.lua
src/zengine/scripts/lua/zengine/echo_client/: echo_client_handler_engine.lua
src/zengine/scripts/lua/zengine/echod/: echod_handler_engine.lua
src/zengine/zengine/: zengine_context.cc  zengine_context.h  zengine_context_manager.cc  zengine_context_manager.h  zengine_daemon.cc  zengine_daemon.h  zengine_plugin.h  zengine_plugin_dll_func.h  zengine_plugin_dll_manager.cc  zengine_plugin_dll_manager.h  zengine_root.cc  zengine_root.h  zengine_thread.cc  zengine_thread.h
src/zengine/zengine/script/: script_file_manager.cc  script_file_manager.h  script_manager.cc  script_manager.h
src/zengine/zengine/script/register_helper/: base_register_helper.cc  zengine_register_helper.cc
