import("//build/config/compiler/compiler.gni")
import("//build/config/features.gni")

if (is_android) {
  import("//build/config/android/config.gni")
}

declare_args() {
  # A list of extra dependencies to add to the root target. This allows a
  # checkout to add additional targets without explicitly changing any checked-
  # in files.
  root_extra_deps = []
}

group("gn_all") {
  testonly = true

  deps = [
     "//base:base",
     "//net:net",
     "//script:script",
     "//sample/trace:trace",
     "//sample/c1000k:c1000k_server",
     "//sample/c1000k:c1000k_client",
     "//sample/c1000k:netengine",
     "//sample/script:scriptengine",
     "//zengine:zengine",
  ]
}