import("//build/buildflag_header.gni")
import("//build/config/allocator.gni")
import("//build/config/chromecast_build.gni")
import("//build/config/compiler/compiler.gni")
import("//build/config/nacl/config.gni")
import("//build/config/sysroot.gni")
import("//build/config/ui.gni")

if (is_android) {
  import("//build/config/android/rules.gni")
}

if (is_win) {
  import("//build/config/win/visual_studio_version.gni")
}

static_library("script") {
  deps = [
    "//base:base",
  ]

  sources = [
    "base/linked_hash_map.h",
    "base/linked_map.h",
    "lua-5.2.3/src/lapi.c",
    "lua-5.2.3/src/lapi.h",
    "lua-5.2.3/src/lauxlib.c",
    "lua-5.2.3/src/lauxlib.h",
    "lua-5.2.3/src/lbaselib.c",
    "lua-5.2.3/src/lbitlib.c",
    "lua-5.2.3/src/lcode.c",
    "lua-5.2.3/src/lcode.h",
    "lua-5.2.3/src/lcorolib.c",
    "lua-5.2.3/src/lctype.c",
    "lua-5.2.3/src/lctype.h",
    "lua-5.2.3/src/ldblib.c",
    "lua-5.2.3/src/ldebug.c",
    "lua-5.2.3/src/ldebug.h",
    "lua-5.2.3/src/ldo.c",
    "lua-5.2.3/src/ldo.h",
    "lua-5.2.3/src/ldump.c",
    "lua-5.2.3/src/lfunc.c",
    "lua-5.2.3/src/lfunc.h",
    "lua-5.2.3/src/lgc.c",
    "lua-5.2.3/src/lgc.h",
    "lua-5.2.3/src/linit.c",
    "lua-5.2.3/src/liolib.c",
    "lua-5.2.3/src/llex.c",
    "lua-5.2.3/src/llex.h",
    "lua-5.2.3/src/llimits.h",
    "lua-5.2.3/src/lmathlib.c",
    "lua-5.2.3/src/lmem.c",
    "lua-5.2.3/src/lmem.h",
    "lua-5.2.3/src/lobject.c",
    "lua-5.2.3/src/lobject.h",
    "lua-5.2.3/src/lopcodes.c",
    "lua-5.2.3/src/lopcodes.h",
    "lua-5.2.3/src/loslib.c",
    "lua-5.2.3/src/loadlib.c",
    "lua-5.2.3/src/lparser.c",
    "lua-5.2.3/src/lparser.h",
    "lua-5.2.3/src/lstate.c",
    "lua-5.2.3/src/lstate.h",
    "lua-5.2.3/src/lstring.c",
    "lua-5.2.3/src/lstring.h",
    "lua-5.2.3/src/lstrlib.c",
    "lua-5.2.3/src/ltable.c",
    "lua-5.2.3/src/ltable.h",
    "lua-5.2.3/src/ltablib.c",
    "lua-5.2.3/src/ltm.c",
    "lua-5.2.3/src/ltm.h",
    "lua-5.2.3/src/luac.c",
    "lua-5.2.3/src/lua.h",
    "lua-5.2.3/src/lua.hpp",
    "lua-5.2.3/src/luaconf.h",
    "lua-5.2.3/src/lualib.h",
    "lua-5.2.3/src/lundump.c",
    "lua-5.2.3/src/lundump.h",
    "lua-5.2.3/src/lvm.c",
    "lua-5.2.3/src/lvm.h",
    "lua-5.2.3/src/lzio.c",
    "lua-5.2.3/src/lzio.h",
    "luabind_register_func.h",
    "luabind_register_manager.h",
    "luatinker/lua_tinker.cpp",
    "luatinker/lua_tinker.h",
    "lua_include.hpp",
    "lua_util.cc",
    "lua_util.h",
    "script_engine.cc",
    "script_engine.h",
    "luatinker/sample1.lua",
    "luatinker/sample2.lua",
    "luatinker/sample3.lua",
    "luatinker/sample4.lua",
    "luatinker/sample5.lua",
    "luatinker/sample6.lua",
  ]
}
