static_library("server") {
  deps = [
    "//base:base",
  ]
  
  sources = [
    "//server/base/xml/tinyxml_parser.cc",
    "//server/base/xml/tinyxml_parser.h", 
    "//server/base/xml/xml_attributes.cc",
    "//server/base/xml/xml_attributes.h",
    "//server/base/xml/xml_parser.cc",
    "//server/base/xml/xml_parser.h",
    "//server/base/xml/xml_serializer.cc",
    "//server/base/xml/xml_serializer.h",
    "//server/base/xml/xml_lite.cc",
    "//server/base/xml/xml_lite.h",
    "//server/base/xml/xml_handler.h",
    "//server/base/xml/xml_parser_module.cc",
    "//server/base/xml/xml_parser_module.h",
    "//server/base/xml/third_party/tinyxml/tinystr.cpp",
    "//server/base/xml/third_party/tinyxml/tinystr.h",
    "//server/base/xml/third_party/tinyxml/tinyxmlerror.cpp",
    "//server/base/xml/third_party/tinyxml/tinyxml.cpp",
    "//server/base/xml/third_party/tinyxml/tinyxml.h",
    "//server/base/xml/third_party/tinyxml/tinyxmlparser.cpp",
    "//server/base/config_file.cc",
    "//server/base/config_file.h",
    "//server/base/config_file_util.cc",
    "//server/base/config_file_util.h",
    "//server/base/config_file_xml_handler.cc",
    "//server/base/config_file_xml_handler.h",
    "//server/base/dyn_lib.cc",
    "//server/base/dyn_lib.h",
    "//server/base/dyn_lib_manager.cc",
    "//server/base/dyn_lib_manager.h",
    "//server/base/exception.cc",
    "//server/base/exception.h",
    "//server/base/shared_ptr.h",
    "//server/base/string_vector.h",
    "//server/base/timer_manager.cc",
    "//server/base/timer_manager.h",  
    "//server/base/zlib_compress.cc",
    "//server/base/zlib_compress.h",      
    "//server/daemon/daemon.cc",
    "//server/daemon/daemon.h",
  ]
}
